# pathosonar_django_backend

./: .gitignore  TODO.txt  genomes_export.csv  manage.py  pyproject.toml  readme.md
covsonar_backend/: asgi.py  settings.py  urls.py  wsgi.py
imports/: _gbk_extraction_import.py  _mutation_import.py  _mutation_properties_import.py  _properties_import.py  annotation_import.py  example_mapping.json
rest_api/: Untitled-1.sql  apps.py  models.py  serializers.py  viewsets.py
rest_api/data_entry/: data_entry.py  gbk_import.py  sample_entry_job.py  sample_import.py
rest_api/migrations/: 0001_initial.py  0002_alter_sample2property_value_varchar_and_more.py  0003_sample_properties_alter_element_accession_and_more.py  0004_sample_properties_alter_sample2property_value_text.py  0005_alter_alignment_id_alter_element_id_and_more.py  0006_add_sample_dummy_properties.py  0006_alignment2mutation_mutation_mutation2annotation_and_more.py  0007_add_sample_dummy_properties_2.py  0007_entereddata.py  0008_alter_entereddata_name.py  0009_remove_mutation_aa_profile_and_more.py  0010_alter_mutation_unique_together.py  0011_alter_mutation_unique_together.py  0012_alter_mutation_unique_together.py  0013_alter_entereddata_unique_together_and_more.py  0014_sample_collection_date_sample_country_and_more.py  0015_gene_genepart_sourceelement_remove_element_molecule_and_more.py  0016_alter_gene_table.py  0017_remove_gene_symbol.py  0018_alter_mutation_element.py  0019_replicon_rename_genepart_genesegment_and_more.py  0020_remove_reference_standard.py  0022_mutation_type.py  (+14 more)
(+2 files in other folders)
